added bootstrap style css modified application style

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,5 +1,10 @@
 // reset
 @import './base/reset';
+@import './base/base';
+
+//bootstrap
+@import './vendor/bootstrap/bootstrap';
+
 
 //layout
 @import './layout/layout';
