--- a/src/styles/layout/layout.scss
+++ b/src/styles/layout/layout.scss
@@ -1,7 +1,7 @@
 .container {
-    background-color: green;
+    background-color: #80de80;
 
-    .header {
-        height: 200px;
-    }
+    //contents
+    min-height: 70rem;
+    padding-top: 100px;
 }
