added time machine debugging

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -5,11 +5,10 @@
 //bootstrap
 @import './vendor/bootstrap/bootstrap';
 
-//layout
-@import './layout/layout';
-@import './layout/header';
-@import './layout/footer';
-
 //components
+@import './components/layout';
+@import './components/header';
+@import './components/footer';
+
 @import './components/Counter/counter';
 @import './components/Home/home';
